// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-ltspn5 soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-xr2gk5 soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="c-wh7dnv soui-switch-content"
  >
    <div
      class="ckcszb4 soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-ltspn5 soui-switch-wrapper c-dmjedk soui-switch-wrapper-checked c-h5qtrp soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="csdtntk soui-switch-loading"
      />
    </div>
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ltspn5 soui-switch-wrapper c-h5qtrp soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="csdtntk soui-switch-loading"
      />
    </div>
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-ltspn5 soui-switch-wrapper cc7fqqg soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ltspn5 soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ltspn5 soui-switch-wrapper cc3dv7w soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-ltspn5 soui-switch-wrapper c-dmjedk soui-switch-wrapper-checked c-h5qtrp soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-ltspn5 soui-switch-wrapper c-h5qtrp soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-xr2gk5 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-wh7dnv soui-switch-content"
    >
      <div
        class="ckcszb4 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
